--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "resend": "^6.8.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/sqlite3": "^3.1.11",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
     "tailwindcss": "^4",
