--- a/data/Projects.json
+++ b/data/Projects.json
@@ -4,32 +4,65 @@
             "Title" : "Jazz In Marciac",
             "Summary" : "Jazz in Marciac est un projet fait en équipe avec un autre développeur, des designers et autres. On nous a demandé un site web servant de vitrine à nos créations concernant le festival. Nos créations sont constituées d'un jeu vidéo, d'un court métrage, d'articles de presse, de merch, avec bien sûr un site web contenant des assets faits pour l'occasion.",
             "ImageLink" : "/ProjectsAssets/JazzInMarciac.png",
+            "ImageAlt" : "Image Site Jazz In Marciac",
             "ImageWidth" : 1901,
-            "ImageHeight" : 868
+            "ImageHeight" : 868,
+
+            "ExtendedDescripton" : [
+                "Jazz in Marciac est un projet d'équipe. Nous étions une équipe de 13 personnes. Dans cette équipe, nous avions 2 développeurs, 2 designers, 2 responsables marketing, 1 Game-Designer, 1 Game-Artist, 2 Game-Developper, 2 modélisateurs 3D et 1 réalisateur de courts métrages.",
+                "Toutes les agences de l'équipe suivaient le même thème, celui donné par le festival, mais chaque agence faisait une mission différente. Notre agence, l'agence web, était composée de développeurs, de designers et de responsables marketing. Notre mission était de faire un site web présentant l'ensemble du projet.",
+                "Notre page d'accueil présentait le festival et les éléments de merch créés à l'occasion par nos designers. Nous avions aussi une page où nous pouvions jouer au jeux vidéo de l'agence Jeu Vidéo, une page pour le court métrage des modélisateurs 3D et du réalisateur. Nous avions par ailleurs une page pour présenter les communiqués de presse de nos responsables marketing ainsi qu'une page quiz demandée par le client.",
+                "Les langages utilisés dans ce projet sont HTML, CSS et JavaScript. Tous les assets graphiques sont fournis par nos designers seulement, le contenu texte, quant à lui, est de nos responsables marketing."
+            ],
+            "GitHubLink" : "https://github.com/Lohos06/Jazz_In_Marciac"
         },
 
         {
             "Title" : "Moi Mon Cerveau",
             "Summary" : "Moi Mon cerveau, était un projet pour la Fondation pour la recherche du cerveau en équipe. Ils nous avaient chargés de créer un module de sensibilisation au cerveau, à son fonctionnement et aux maladies le concernant. Nous avons donc développé un quiz sur les habitudes et leur impact sur le cerveau, donnant des conseils après chaque question. Nous avons aussi développé une carte du cerveau interactive afin d'apprendre à le connaitre et un minijeu pour le travailler.",
             "ImageLink" : "/ProjectsAssets/MoiMonCerveau.png",
+            "ImageAlt" : "Image Site Moi Mon Cerveau",
             "ImageWidth" : 1900,
-            "ImageHeight" : 1079
+            "ImageHeight" : 1079,
+
+            "ExtendedDescripton" : [
+                "Le projet Moi Mon Cerveau est un projet en équipe. Notre équipe était constituée de 3 développeurs, 2 designers, 2 responsables marketing et 2 chefs de projets.",
+                "Les deux autres développeurs et moi-même avons donc intégré la maquette de nos designers et développé 4 pages. Une page d'accueil où se présente un cerveau interactif, nous permettant d'apprendre les différents hémisphères du cerveau. Une autre page est celle du quiz qui permet de tester si nos habitudes sont bénéfiques ou non au cerveau. Une page est dédiée à un minijeu afin d'entrainer son cerveau en s'amusant. Et enfin une page pour envoyer son mail à la fondation dans le but de recevoir leur newsletter.",
+                "Les langages utilisés sont HTML, CSS, JavaScript. Les assets graphiques sont tous fournis par nos designers."
+            ],
+            "GitHubLink" : "https://github.com/IIM-CDI/BAP_grp11_MoiMonCerveau"
         },
 
         {
             "Title" : "Pokemon Trading Center",
             "Summary" : "Pokemon Trading Center est un projet personnel avec pour fonction la collection et l'échange de cartes Pokemons. Ce site permet l'ouverture de boosters, la collection et l'échange de cartes Pokémon pour chacun de ses utilisateurs.",
             "ImageLink" : "/ProjectsAssets/PokemonTradingCenter.png",
+            "ImageAlt" : "Image Site Pokemon Trading Center",
             "ImageWidth" : 1919,
-            "ImageHeight" : 1079
+            "ImageHeight" : 1079,
+
+            "ExtendedDescripton" : [
+                "Le projet Pokémon Trading Center est un projet solo. Le projet avait pour but de créer un site d'échange de cartes Pokémon.",
+                "Le site comprend donc une page d'accueil nous présentant le site et nous donnant accès aux boosters de cartes a ouvrir. Il y a une page d'inscription et de connexion. Il y a une page pour montrer les cartes possédées par l'utilisateur connecté et une page pour avoir toutes les cartes disponibles. Il y a un mode sombre ainsi qu'une recherche dynamique de cartes. Et enfin un admin panel pour gérer les utilisateurs avec accès sécurisé.",
+                "Langages utilisés : HTML, CSS, JavaScript, PHP, SQL. Les assets utilisés sont soit les miens, soit venus d'internet."    
+            ],
+            "GitHubLink" : "https://github.com/Lohos06/Pokemon-Trading-Center-2000"
         },
 
         {
             "Title" : "Liam Studio",
             "Summary" : "Liam Studio est un site web de presentation des courts metrage d'un jeune studio d'animation.Il y a une presentation de qui ils sont, les animations les plus populaires du studio tel que Before The StormAinsi qu'un formulaire pour contacter le studio.",
             "ImageLink" : "/ProjectsAssets/LiamStudio.png",
+            "ImageAlt" : "Image Site Liam Studio",
             "ImageWidth" : 1898,
-            "ImageHeight" : 1079
+            "ImageHeight" : 1079,
+
+            "ExtendedDescripton" : [
+               "Le projet Liam Studio est un projet solo. Le projet a pour but de créer un site de présentation des meilleures animations d'un petit studio." ,
+               "Dans ce site, il y aura une brève présentation de l'animateur du studio ainsi qu'une liste des animations les plus populaires du studio. Il y a aussi un formulaire de contact pour que des partenaires ou des fans puissent prendre contact facilement.",
+               "Les langages utilisés sont : HTML, CSS, JavaScript."
+            ],
+            "GitHubLink" : "http://github.com/Lohos06/Liam-Studio"
         }
     ]
 } 
